bizinikiwi/pezframe/support/test/tests/pezpallet_ui/task_invalid_gen2.stderr
error: Invalid type def generics: expected `T` or `T: Config` or `T, I = ()` or `T: Config<I>, I: 'static = ()`
  --> tests/pezpallet_ui/task_invalid_gen2.rs:32:11
   |
32 |     pub enum Task {}
   |              ^^^^

error: unexpected end of input, expected `T`
  --> tests/pezpallet_ui/task_invalid_gen2.rs:18:1
   |
18 | #[pezframe_support::pezpallet(dev_mode)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `pezframe_support::pezpallet` (in Nightly builds, run with -Z macro-backtrace for more info)
